# semantic_news_graph

./: .env.example  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  requirements_ml.txt  setup.py
.github/workflows/: black.yml
archive/data/interim/: custom_ners.csv
data/processed/: triplets-27.10.22.json
docker/: .gitignore  channels.json  docker-compose.yml
docker/app/: Dockerfile
docker/ml_pipelines/: Dockerfile
docker/nginx/: nginx.conf
docker/parser/: parser.py
docs/: conf.py
flack_html/: app.py
flack_html/static/: temp.txt
flack_html/static/css/: main.css
flack_html/static/data/: data.json  suits.csv
flack_html/templates/: base.html
notebooks/: 01-research--baseline-stanza.ipynb  02-research--baseline-spacy.ipynb  03-research--summarization-compare-models.ipynb  04-research--summarization-batch-inference.ipynb  05-research-triplet_extraction_experiments.ipynb  06-research--ner.ipynb  06-research--ner_entity_linking.ipynb
notebooks/test_KG_with_spacy/: graph_show.py  news_graph.py  test1.ipynb
notebooks/test_KG_with_spacy/graphs/: 1.html  10.html  11.html  (+36 more)
parser/: parser.py
reports/research/: 05-research--ner_compare.xlsx  05-research--ner_compare_data.xlsx
src/: common_classes.py  common_funcs.py
src/app/: app.py  example_graph.csv  requirements.txt
src/data/: create_db_schema.sql  put_custom_ners.py
src/models/: ner_pipeline.py  summarization_pipeline.py
static/data/: package.json
static/js/: 70f8856cb0e05d56@228.js  a33468b95d0b15b0@808.js  base.js  index.js
templates/: index.html
(+6 files in other folders)
