[tool.poetry]
name = "semantic-news-graph"
version = "0.1.0"
description = ""
authors = ["andrey <enron07@gmail.com>"]
readme = "README.md"
packages = [{include = "semantic_news_graph"}]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
